kube/deploy/core/_networking/tailscale/router/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &name tailscale-router
  namespace: &app "tailscale"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: *name
  ingress:
    # same namespace
    - fromEntities:
        - world
        - host
        - remote-node
  egress:
    - toEntities:
        - world
        - host
        - remote-node
        - cluster
